# apstra-bp-consolidate

./: .gitignore  README.md  pyproject.toml  requirements.txt
apstra_bp_consolidation/: apstra_blueprint.py  apstra_session.py  consolidation.py  ct.dot  move_access_switch.py  move_ct.py  move_device.py  move_generic_system.py  move_vn.py
config_extraction/: config_info_extract.py
src/apstra_bp_consolidation/: __main__.py  apstra_blueprint.py  apstra_session.py  consolidation.py  find_missing_vn.py  move_access_switch.py  move_ct.py  move_device.py  move_generic_system.py  move_vn.py  pull_configs.py
tests/: conftest.py  test_10_session.py  test_12_blueprint.py
tests/fixtures/: config.yaml  switch-system-links-5120.json
