[project]
name = "apstra_bp_consolidation"
version = "0.1.0"
description = "Consolidate TOR blueprint is the main blueprint as access switch pairs"
authors = [ { name = "Charlie Kim", email = "ckim@juniper.net"} ]
requires-python = ">=3.9"
dependencies = [
    "requests == 2.29.0",
    "pydantic==2.1.1",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "PyYAML==6.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
consolidation-helper = "apstra_bp_consolidation.consolidation:cli"


[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py39
    skipsdist = True
    isolated_build = True

    [pytest]
    log_cli = True
    log_cli_level = DEBUG
    console_output_style = progress

    [testenv]
    description = run the tests with pytest
    package = wheel
    wheel_build_env = .pkg
    deps =
        -rrequirements.txt
        pytest>=6
    commands =
        pytest {tty:--color=yes} {posargs:tests}

"""